# some-docs

./: pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
docs/: index.html
docs/AI/: c_fedrag.md
somedocs/: README.md  _sidebar.md
