[tool.poetry]
name = "somedocs"
version = "0.1.0"
description = ""
authors = ["HoKei2001"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipdb = "^0.13.13"
pytest = "^8.3.4"
pydantic-settings = "^2.6.0"
setuptools = "^75.6.0"
git-filter-repo = "^2.47.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
